Javascript workaround to a z-index issue Adjust modal close button size

--- a/portfolio/css/freelancer.css
+++ b/portfolio/css/freelancer.css
@@ -353,7 +353,7 @@ footer .footer-col {
 }
 
 .portfolio-modal .modal-content {
-    padding: 100px 0;
+    padding: 50px 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -381,7 +381,7 @@ footer .footer-col {
     top: 25px;
     right: 25px;
     width: 75px;
-    height: 75px;
+    height: 25px;
     background-color: transparent;
     cursor: pointer;
 }
@@ -393,7 +393,7 @@ footer .footer-col {
 .portfolio-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
-    height: 75px;
+    height: 50px;
     margin-left: 35px;
     background-color: #2c3e50;
     -webkit-transform: rotate(45deg);
@@ -404,7 +404,7 @@ footer .footer-col {
 .portfolio-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
-    height: 75px;
+    height: 50px;
     background-color: #2c3e50;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
